[package]
name = "tginbox"
version = "0.1.1"
authors = ["Giuseppe Corti <giuseppe.corti@pm.me>"]
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
mailin-embedded = { git = "https://github.com/r3vn/mailin.git", branch = "parser-space" } # fork with fixed parser for some clients
mailparse = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4.5", features = ["derive"] }
nanohtml2text = "0.2"
nix = { version = "0.29", features = ["process"], optional = true }

[features]
default = []
unixdaemon = ["dep:nix"]
