[package]
name = "tginbox"
version = "0.2.0"
authors = ["Giuseppe Corti <giuseppe.corti@pm.me>"]
edition = "2021"

[dependencies]
mailin-embedded = { git = "https://github.com/r3vn/mailin.git", branch = "parser-space" } # fork with fixed parser for some clients
mail-parser = "0.9"
ureq = { version = "3.0", features = ["json"]}
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4.5", features = ["derive"] }
nanohtml2text = "0.2"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["process"], optional = true }

[features]
default = []
unixdaemon = ["dep:nix"]
